# babs

./: Cargo.toml  README.md
benches/: base.rs  bench_main.rs  divbase.rs  fibo.rs
src/: digit.rs  lib.rs  result.rs  ubig.rs
src/ubig/: add.rs  cmp.rs  div.rs  mul.rs  ops.rs  rsub.rs  shl.rs  shr.rs  sub.rs  support.rs
src/ubig/div/: bz.rs  long.rs
src/ubig/mul/: karatsuba.rs  long.rs  toom3.rs
tests/: add.rs  cmp.rs  div.rs  mul.rs  pow.rs  rem.rs  shl.rs  shr.rs  square.rs  sub.rs
