[package]
name = "babs"
description = "Pure Rust library for big integer arithmetic"
version = "0.1.0"
authors = ["Gé Vissers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_main"
harness = false
